Implement cross-platform endian.h compatibility solution
Replace broken __GNUC__ undefining approach with elegant local endian.h:

- Create local ext/fastpbkdf2/endian.h that handles all platforms
- macOS: Use machine/endian.h and libkern/OSByteOrder.h
- Windows: Hardcode little-endian constants for x86/x64
- Linux: Use system endian.h via include_next
- Simplify wrapper to just include fastpbkdf2.c cleanly
- Update coverage job to run even if some test matrix jobs fail

This avoids breaking Windows MinGW toolchain headers while preserving pristine vendor files and maintaining cross-platform compatibility.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,7 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     needs: test
+    if: always() # Run even if some test jobs fail
 
     steps:
       - uses: actions/checkout@v4
@@ -83,6 +84,7 @@ jobs:
         with:
           name: coverage-report
           path: coverage/
+        continue-on-error: true # In case no coverage artifact was uploaded
 
       - name: Upload coverage to Qlty
         uses: qltysh/qlty-action/coverage@v1
